--- a/src/pages/EmployeeInfo/AddCareerHistory/index.module.css
+++ b/src/pages/EmployeeInfo/AddCareerHistory/index.module.css
@@ -1,6 +1,8 @@
-.main__container {
-  padding: 30px 0 50px 40px;
+.popover__target {
   width: 70%;
+}
+.main__container {
+  padding: 0px 0 30px 40px;
   border-right: solid 1px #dfdfdf;
 }
 .container__flex {
@@ -17,8 +19,9 @@
   margin-top: 10px;
 }
 .add__button {
-  width: 90%;
-  margin-top: 80px;
+  background-color: #e9e9e9;
+  padding: 15px 30px;
+  margin-top: 20px;
   display: flex;
   justify-content: flex-end;
 }
@@ -48,12 +51,27 @@
   padding: 15px 10px 10px 0;
   font-size: 14px;
 }
-.skills__button {
-  margin-top: 10px;
-  width: 80px;
-  font-size: 12px;
-}
+
 .skills__input {
   width: 200px;
   margin: 10px 0;
+}
+
+.circular__add {
+  width: 16px;
+  height: 12px;
+  background-color: #3f3f3f;
+  color: #e9e9e9;
+  border-radius: 50%;
+  padding-bottom: 5px;
+}
+
+.append__array_btn {
+  cursor: pointer;
+  text-align: center;
+  display: flex;
+  gap: 5px;
+  margin-top: 20px;
+  font-size: 12px;
+  color: #3f3f3f;
 }
