feat: multi-valued field

--- a/src/pages/EmployeeInfo/components/AddCareerHistory/index.module.css
+++ b/src/pages/EmployeeInfo/components/AddCareerHistory/index.module.css
@@ -8,14 +8,14 @@
 .container__flex {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 40px;
 }
 .text__input {
   margin: 0 30px 30px 0;
   height: 65px;
 }
 .container__col {
-  min-width: 47%;
+  min-width: 42%;
   margin-top: 10px;
 }
 .add__button {
@@ -33,6 +33,7 @@
 
 .dropdowns {
   margin-bottom: 20px;
+  max-width: 200px;
 }
 
 .popover__container {
@@ -42,36 +43,4 @@
 .apply__button {
   margin-top: 20px;
   width: 100%;
-}
-
-.skills__header {
-  font-weight: 500;
-}
-.skills__item {
-  padding: 15px 10px 10px 0;
-  font-size: 14px;
-}
-
-.skills__input {
-  width: 200px;
-  margin: 10px 0;
-}
-
-.circular__add {
-  width: 16px;
-  height: 12px;
-  background-color: #3f3f3f;
-  color: #e9e9e9;
-  border-radius: 50%;
-  padding-bottom: 5px;
-}
-
-.append__array_btn {
-  cursor: pointer;
-  text-align: center;
-  display: flex;
-  gap: 5px;
-  margin-top: 20px;
-  font-size: 12px;
-  color: #3f3f3f;
 }
