--- a/src/pages/EmployeeInfo/components/AddCareerHistory/index.module.css
+++ b/src/pages/EmployeeInfo/components/AddCareerHistory/index.module.css
@@ -1,14 +1,9 @@
 .popover__target {
-  width: 70%;
+  width: 76%;
 }
-.main__container {
-  padding: 0px 0 30px 40px;
-  border-right: solid 1px #dfdfdf;
-}
-.container__flex {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
+.header {
+  padding-bottom: 15px;
+  border-bottom: solid 1px #dfdfdf;
 }
 .text__input {
   margin: 0 30px 30px 0;
@@ -16,14 +11,15 @@
 }
 .container__col {
   min-width: 42%;
-  margin-top: 10px;
+  padding: 0px 40px 0 40px;
 }
 .add__button {
-  background-color: #e9e9e9;
+  background-color: #fafafa;
   padding: 15px 30px;
-  margin-top: 20px;
+  margin-top: 70px;
   display: flex;
   justify-content: flex-end;
+  gap: 10px;
 }
 .applied__reference {
   padding-right: 10px;
