--- a/src/pages/EmployeeInfo/components/MultiField/index.module.css
+++ b/src/pages/EmployeeInfo/components/MultiField/index.module.css
@@ -1,3 +1,14 @@
+.main__container {
+  margin: 50px 0;
+  display: flex;
+  gap: 30px;
+}
+.container__col {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 .header {
   margin: 50px 0 10px 0;
   font-weight: 500;
