refactor: single object removed and grouping of fields to be handled by GroupRow component

--- a/src/pages/EmployeeInfo/components/CareerHistoryForm/components/SingleField/index.module.css
+++ b/src/pages/EmployeeInfo/components/CareerHistoryForm/components/SingleField/index.module.css
@@ -1,13 +1,6 @@
 .main__container {
-  margin: 40px 0 60px 0;
-  display: flex;
-  gap: 30px;
+  margin-bottom: 20px;
 }
-
-.container__col {
-  width: 50%;
-}
-
 .read__label {
   padding-top: 5px;
   font-size: 16px;
