--- a/src/pages/EmployeeInfo/components/CareerHistoryForm/components/MultiField/index.module.css
+++ b/src/pages/EmployeeInfo/components/CareerHistoryForm/components/MultiField/index.module.css
@@ -3,8 +3,14 @@
   display: flex;
   gap: 30px;
 }
-.container__col {
-  width: 50%;
+.container__col_label {
+  width: 28%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.container__col_content {
+  width: 55%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -34,9 +40,9 @@
   text-align: center;
   display: flex;
   gap: 5px;
-  margin-top: 20px;
-  font-size: 12px;
+  font-size: 10px;
   color: #3f3f3f;
+  padding-top: 3px;
 }
 
 .append__btn {
@@ -51,4 +57,11 @@
   color: #3f3f3f;
   font-size: 10px;
   margin-left: 30px;
+}
+
+.add__to_array {
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 12px;
+  color: #0044ff;
 }
